fix: adjust height and placement of list view panel so that controls are now visible

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 .listview {
-  height: calc(100vh - 140px);
+  height: calc(100vh - 190px);
 }
 
 @media screen and (max-width: 350px) {
